--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "dev": "nodemon ./src/Server.ts",
     "test": "jest --detectOpenHandles --forceExit",
     "testStudent": "jest --detectOpenHandles --forceExit ./src/tests/student.test.ts",
+    "testAuth": "jest --detectOpenHandles --forceExit ./src/tests/auth.test.ts",
     "lint": "eslint . --ext .ts"
   },
   "author": "Ido Ben Noun",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1"
   },
   "devDependencies": {
