--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest --detectOpenHandles --forceExit",
     "testStudent": "jest --detectOpenHandles --forceExit ./src/tests/student.test.ts",
     "testAuth": "jest --detectOpenHandles --forceExit ./src/tests/auth.test.ts",
+    "testPost": "jest --detectOpenHandles --forceExit ./src/tests/post.test.ts",
     "lint": "eslint . --ext .ts"
   },
   "author": "Ido Ben Noun",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
