--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "SCE 2024 backend",
   "main": "app.js",
   "scripts": {
-    "start": "tsc && node dist/src/Server.js",
-    "dev": "nodemon ./src/Server.ts",
-    "test": "jest --detectOpenHandles --forceExit",
-    "testStudent": "jest --detectOpenHandles --forceExit ./src/tests/student.test.ts",
-    "testAuth": "jest --detectOpenHandles --forceExit ./src/tests/auth.test.ts",
-    "testPost": "jest --detectOpenHandles --forceExit ./src/tests/post.test.ts",
+    "start": "copy .env_dev .env && tsc && node dist/src/Server.js",
+    "dev": "copy .env_dev .env && nodemon ./src/Server.ts",
+    "test": "copy .env_test .env && jest --detectOpenHandles --forceExit",
+    "testStudent": "copy .env_test .env && jest --detectOpenHandles --forceExit ./src/tests/student.test.ts",
+    "testAuth": "copy .env_test .env && jest --detectOpenHandles --forceExit ./src/tests/auth.test.ts",
+    "testPost": "copy .env_test .env && jest --detectOpenHandles --forceExit ./src/tests/post.test.ts",
     "lint": "eslint . --ext .ts"
   },
   "author": "Ido Ben Noun",
@@ -20,13 +20,17 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
