--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Ido Ben Noun",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/sharp": "^0.32.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.2",
